@@ -105,6 +105,7 @@ namespace GtkSharp.Generation {
 			
 			sw.Flush();
 			sw.Close();
+			Statistics.EnumCount++;
 		}
 		
 	}
