@@ -1,3 +1,8 @@
+2002-02-19  Mike Kestner <mkestner@speakeasy.net>
+
+	* generator/Statistics.cs : New. Gathers stats about generation.
+	* generator/*.cs : Hook in the stat counters.
+
 2002-02-18  Mike Kestner <mkestner@speakeasy.net>
 
 	* generator/StructBase.cs (GenCtor): StudCapsify static method names.
